이미지 안뜨는것 수정

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div id="container">
       <div class="headerTop_box">
         <a href="#" target="_blank">
-          <img src="img/movie_top_ad.jpg" alt="헤더 상단 광고">
+          <img src="./img/movie_top_ad.jpg" alt="헤더 상단 광고">
         </a>
         <i class="fa-solid fa-xmark"></i>
       </div>
@@ -117,7 +117,7 @@
           <li>
             <div class="posterArea">
               <p class="posterLanking">1</p>
-              <img src="/img/rank_movie_01.jpg" alt="범죄도시2">
+              <img src="./img/rank_movie_01.jpg" alt="범죄도시2">
               <div class="posterDetail">
                 <a href="#">상세정보</a>
                 <a href="#" class="movieTicket">예매하기</a>
@@ -131,7 +131,7 @@
           <li>
             <div class="posterArea">
               <p class="posterLanking">2</p>
-              <img src="/img/rank_movie_02.jpg" alt="마녀2">
+              <img src="./img/rank_movie_02.jpg" alt="마녀2">
               <div class="posterDetail">
                 <a href="#">상세정보</a>
                 <a href="#" class="movieTicket">예매하기</a>
@@ -145,7 +145,7 @@
           <li>
             <div class="posterArea">
               <p class="posterLanking">3</p>
-              <img src="/img/rank_movie_03.jpg" alt="탑건 매버릭">
+              <img src="./img/rank_movie_03.jpg" alt="탑건 매버릭">
               <div class="posterDetail">
                 <a href="#">상세정보</a>
                 <a href="#" class="movieTicket">예매하기</a>
@@ -159,7 +159,7 @@
           <li>
             <div class="posterArea">
               <p class="posterLanking">4</p>
-              <img src="/img/rank_movie_04.jpg" alt="버즈 라이트이어">
+              <img src="./img/rank_movie_04.jpg" alt="버즈 라이트이어">
               <div class="posterDetail">
                 <a href="#">상세정보</a>
                 <a href="#" class="movieTicket">예매하기</a>
