id container 중복 수정

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- /스킵 -->
   <!-- 헤더 상단 광고 -->
   <div class="headerTop_ad">
-    <div id="container">
+    <div class="container">
       <div class="headerTop_box">
         <a href="#" target="_blank">
           <img src="./img/movie_top_ad.jpg" alt="헤더 상단 광고">
@@ -29,7 +29,7 @@
   <!-- /헤더 상단 광고 -->
   <!-- 헤더 -->
   <header id="header">
-    <div id="container">
+    <div class="container">
       <div class="headerMain">
         <h1 class="ci">
           <a href="/" title="메가박스 홈으로가기"></a>
@@ -83,7 +83,7 @@
   <!-- 비디오 및 메인 -->
   <section id="header_video">
     <video src="./img/BuzzLightyear_1m30s.mp4" autoplay loop muted></video>
-    <div id="container">
+    <div class="container">
       <article class="secMain">
         <p>&lt;토이스토리&gt; &lt;소울&gt; 제작진</p>
         <p>디즈니 픽사 스페이스 액션 어드벤처</p>
@@ -99,7 +99,7 @@
   <!-- /비디오 및 메인 -->
   <!-- 헤더_영화랭킹 -->
   <section id="header_bottom">
-    <div id="container">
+    <div class="container">
       <div class="moveMouse">
         <i class="fa-solid fa-computer-mouse"></i>
       </div>
