일부 반응형 및 추가작업

--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@
       </div>
       <div class="boxOffice">
         <div class="boxLank">
-          <p>박스오피스</p>
-          <p>상영예정작</p>
+          <a href="#">박스오피스</a>
+          <a href="#">상영예정작</a>
         </div>
         <div class="boxMore">
-          <a href="#">전체영화 <i class="fa-solid fa-plus"></i></a>
+          <a href="#">전체영화<i class="fa-solid fa-plus"></i></a>
         </div>
       </div>
       <div class="boxLank_poster">
@@ -175,5 +175,58 @@
     </div>
   </section>
   <!-- /헤더_영화랭킹 -->
+  <!-- 혜택 -->
+  <!--
+  <section id="section01">
+    <div class="container">
+      <div class="benefit">
+        <p class="benefitTit">혜택</p>
+        <a href="#" class="benefitMore">전체보기<i class="fa-solid fa-plus"></i></a>
+      </div>
+      <div class="benefit_area">
+        <div class="slider">
+          <div class="slider_01">
+            <a href="#">
+              <img src="./img/benefit-topslider-1.jpg" alt="대한항공x메가박스">
+            </a>
+            <a href="#">
+              <img src="./img/benefit-topslider-1-1.jpg" alt="대한항공x메가박스">
+            </a>
+          </div>
+          <div class="slider_02">
+            <a href="#">
+              <img src="" alt="">
+            </a>
+            <a href="#">
+              <img src="" alt="">
+            </a>
+          </div>
+          <div class="slider_03">
+            <a href="#">
+              <img src="" alt="">
+            </a>
+            <a href="#">
+              <img src="" alt="">
+            </a>
+          </div>
+          <div class="sleder_contr"></div>
+        </div>
+        <div class="benefit_ad">
+          <div>
+            <a href="#">
+              <img src="" alt="">
+            </a>
+          </div>
+          <div></div>
+          <div></div>
+        </div>
+      </div>
+      <div>
+
+      </div>
+    </div>
+  </section>
+  -->
+  <!-- /혜택 -->
 </body>
 </html>
