link >> javascript:void(0); 수정

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="headerTop_ad">
     <div class="container">
       <div class="headerTop_box">
-        <a href="#" target="_blank">
+        <a href="javascript:void(0);" target="_blank">
           <img src="./img/movie_top_ad.jpg" alt="헤더 상단 광고">
         </a>
         <i class="fa-solid fa-xmark"></i>
@@ -36,41 +36,41 @@
         </h1>
         <!-- <div class="headerTop"></div> -->
         <div class="headerTop_left">
-          <a href="#" title="VIP LOUNGE">VIP LOUNGE</a>
-          <a href="#" title="멤버십">멤버십</a>
-          <a href="#" title="고객센터">고객센터</a>
+          <a href="javascript:void(0);" title="VIP LOUNGE">VIP LOUNGE</a>
+          <a href="javascript:void(0);" title="멤버십">멤버십</a>
+          <a href="javascript:void(0);" title="고객센터">고객센터</a>
         </div>
         <div class="headerTop_right">
-          <a href="#" title="로그인">로그인</a>
-          <a href="#" title="회원가입">회원가입</a>
-          <a href="#" title="MY MEGA">MY MEGA</a>
+          <a href="javascript:void(0);" title="로그인">로그인</a>
+          <a href="javascript:void(0);" title="회원가입">회원가입</a>
+          <a href="javascript:void(0);" title="MY MEGA">MY MEGA</a>
         </div>
       </div>
       <div class="headerMenu">
         <div class="gnb">
           <ul>
-            <li><a href="#">영화</a></li>
-            <li><a href="#">예매</a></li>
-            <li><a href="#">극장</a></li>
-            <li><a href="#">이벤트</a></li>
-            <li><a href="#">스토어</a></li>
-            <li><a href="#">혜택</a></li>
+            <li><a href="javascript:void(0);">영화</a></li>
+            <li><a href="javascript:void(0);">예매</a></li>
+            <li><a href="javascript:void(0);">극장</a></li>
+            <li><a href="javascript:void(0);">이벤트</a></li>
+            <li><a href="javascript:void(0);">스토어</a></li>
+            <li><a href="javascript:void(0);">혜택</a></li>
           </ul>
         </div>
         <div class="header_icon">
           <ul>
             <li>
-              <a href="#" title="검색">
+              <a href="javascript:void(0);" title="검색">
                 <i class="fa-solid fa-magnifying-glass"></i>
               </a>
             </li>
             <li>
-              <a href="#" title="상영시간표">
+              <a href="javascript:void(0);" title="상영시간표">
                 <i class="fa-solid fa-calendar-days"></i>
               </a>
             </li>
             <li>
-              <a href="#" title="전체메뉴">
+              <a href="javascript:void(0);" title="전체메뉴">
                 <i class="fa-solid fa-bars"></i>
               </a>
             </li>
@@ -105,11 +105,11 @@
       </div>
       <div class="boxOffice">
         <div class="boxLank">
-          <a href="#">박스오피스</a>
-          <a href="#">상영예정작</a>
+          <a href="javascript:void(0);">박스오피스</a>
+          <a href="javascript:void(0);">상영예정작</a>
         </div>
         <div class="boxMore">
-          <a href="#">전체영화<i class="fa-solid fa-plus"></i></a>
+          <a href="javascript:void(0);">전체영화<i class="fa-solid fa-plus"></i></a>
         </div>
       </div>
       <div class="boxLank_poster">
@@ -119,8 +119,8 @@
               <p class="posterLanking">1</p>
               <img src="./img/rank_movie_01.jpg" alt="범죄도시2">
               <div class="posterDetail">
-                <a href="#">상세정보</a>
-                <a href="#" class="movieTicket">예매하기</a>
+                <a href="javascript:void(0);">상세정보</a>
+                <a href="javascript:void(0);" class="movieTicket">예매하기</a>
               </div>
             </div>
             <div class="movieInfo">
@@ -133,8 +133,8 @@
               <p class="posterLanking">2</p>
               <img src="./img/rank_movie_02.jpg" alt="마녀2">
               <div class="posterDetail">
-                <a href="#">상세정보</a>
-                <a href="#" class="movieTicket">예매하기</a>
+                <a href="javascript:void(0);">상세정보</a>
+                <a href="javascript:void(0);" class="movieTicket">예매하기</a>
               </div>
             </div>
             <div class="movieInfo">
@@ -147,8 +147,8 @@
               <p class="posterLanking">3</p>
               <img src="./img/rank_movie_03.jpg" alt="탑건 매버릭">
               <div class="posterDetail">
-                <a href="#">상세정보</a>
-                <a href="#" class="movieTicket">예매하기</a>
+                <a href="javascript:void(0);">상세정보</a>
+                <a href="javascript:void(0);" class="movieTicket">예매하기</a>
               </div>
             </div>
             <div class="movieInfo">
@@ -161,8 +161,8 @@
               <p class="posterLanking">4</p>
               <img src="./img/rank_movie_04.jpg" alt="버즈 라이트이어">
               <div class="posterDetail">
-                <a href="#">상세정보</a>
-                <a href="#" class="movieTicket">예매하기</a>
+                <a href="javascript:void(0);">상세정보</a>
+                <a href="javascript:void(0);" class="movieTicket">예매하기</a>
               </div>
             </div>
             <div class="movieInfo">
@@ -176,57 +176,30 @@
   </section>
   <!-- /헤더_영화랭킹 -->
   <!-- 혜택 -->
-  <!--
   <section id="section01">
     <div class="container">
       <div class="benefit">
         <p class="benefitTit">혜택</p>
-        <a href="#" class="benefitMore">전체보기<i class="fa-solid fa-plus"></i></a>
+        <a href="javascript:void(0);" class="benefitMore">전체보기<i class="fa-solid fa-plus"></i></a>
       </div>
-      <div class="benefit_area">
+      <!-- <div class="benefit_area">
         <div class="slider">
           <div class="slider_01">
-            <a href="#">
-              <img src="./img/benefit-topslider-1.jpg" alt="대한항공x메가박스">
-            </a>
-            <a href="#">
-              <img src="./img/benefit-topslider-1-1.jpg" alt="대한항공x메가박스">
-            </a>
-          </div>
-          <div class="slider_02">
-            <a href="#">
-              <img src="" alt="">
-            </a>
-            <a href="#">
-              <img src="" alt="">
-            </a>
-          </div>
-          <div class="slider_03">
-            <a href="#">
-              <img src="" alt="">
-            </a>
-            <a href="#">
-              <img src="" alt="">
-            </a>
+            <ul>
+              <li class="slideTest"></li>
+            </ul>
           </div>
           <div class="sleder_contr"></div>
         </div>
         <div class="benefit_ad">
-          <div>
-            <a href="#">
-              <img src="" alt="">
-            </a>
-          </div>
+          <div></div>
+          <div></div>
           <div></div>
           <div></div>
         </div>
-      </div>
-      <div>
-
-      </div>
+      </div> -->
     </div>
   </section>
-  -->
   <!-- /혜택 -->
 </body>
 </html>
